--- a/views/no_flights_found.ejs
+++ b/views/no_flights_found.ejs
@@ -74,16 +74,18 @@
                             
                             <div class="col-11 mx-auto">
                                 <div class="row text-left p-2">
-                                    <label for="user_name" class="form-label"><h4>From</h4></label>
-                                    <input class="form-control me-2" type="search" placeholder="Enter city name" aria-label="Departure city" id="departure_city" name="departure_city" required>
-                                </div>
-                            </div>
-                            <div class="col-11 mx-auto">
-                                <div class="row text-left p-2">
                                     <label for="user_name" class="form-label"><h4>To</h4></label>
                                     <input class="form-control me-2" type="search" placeholder="Enter city name" aria-label="Destination city" id="destination_city" name="destination_city" required>
                                 </div>
                             </div>
+
+                            <div class="col-11 mx-auto">
+                                <div class="row text-left p-2">
+                                    <label for="user_name" class="form-label"><h4>From</h4></label>
+                                    <input class="form-control me-2" type="search" placeholder="Enter city name" aria-label="Departure city" id="departure_city" name="departure_city" required>
+                                </div>
+                            </div>
+                            
                             <div class="col-12 m-2 mt-2">
                                 <div class="row text-left">
                                     <div class="col-5 m-2 mt-0">
@@ -92,7 +94,7 @@
                                     </div>
                                     <div class="col-5 m-2 mt-0">
                                         <label for="user_name" class="form-label"><h4>Round trip</h4></label>
-                                    <input class="form-control me-2" type="date" placeholder="Date of check-out" aria-label="Date of travel" id="return_date" name="return_date" onchange="getReturnDate()" required>
+                                    <input class="form-control me-2" type="date" placeholder="Date of check-out" aria-label="Date of travel" id="return_date" name="return_date" onchange="getReturnDate()">
                                     </div>
                                     
                                 </div>
