--- a/views/bookings.ejs
+++ b/views/bookings.ejs
@@ -21,7 +21,7 @@
     <div class="container-fluid">
         <nav class="navbar bg-primary navbar-expand-lg text-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="homepage"><h4 class="text-light">Nomadic travel</h4></a>
+                <a class="navbar-brand" href="/"><h4 class="text-light">Nomadic travel</h4></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -56,8 +56,9 @@
                         My account
                     </button>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="editprofile">Edit profile</a></li>
-                      <li><a class="dropdown-item" href="logout">Log out</a></li>
+                        <li><a class="dropdown-item" href="editprofile">Edit profile</a></li>
+                        <li><a class="dropdown-item bg-primary text-white" href="editprofile"><b></b><%= user.mileage %> miles</b></a></li>
+                        <li><a class="dropdown-item" href="logout">Log out</a></li>
                     </ul>
                   </div>
                 
@@ -116,6 +117,7 @@
                                         <input type="hidden" id="departure_time" name="departure_time" value ="<%= search_results[i].departure_time %>"/>
                                         <input type="hidden" id="arrival_time" name="arrival_time" value ="<%= search_results[i].arrival_time %>"/>
                                         <input type="hidden" id="passengers" name="passengers" value ="<%= search_results[i].passengers %>"/>
+                                        <input type="hidden" id="miles" name="miles" value ="<%= search_results[i].miles %>"/>
                                         <input type="hidden" id="price" name="price" value ="<%= search_results[i].price %>"/>                                        
                                         
                                         <button type="submit" class="btn btn-danger m-0">Cancel booking</button>
