--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -34,6 +34,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active text-light" aria-current="page" href="searchflights">
+                            <button type="button" class="btn btn-primary" onclick="setdouble()">Flights & Hotels</button>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active text-light" aria-current="page" href="viewcart">
                             <button type="button" class="btn btn-primary">Shopping cart</button>
                         </a>
@@ -53,6 +58,7 @@
                     </button>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="editprofile">Edit profile</a></li>
+                      <li><a class="dropdown-item bg-primary text-white" href="editprofile"><b></b><%= user.mileage %> miles</b></a></li>
                       <li><a class="dropdown-item" href="logout">Log out</a></li>
                     </ul>
                   </div>
@@ -93,7 +99,7 @@
                                     </div>
                                     <div class="col-5 m-2 mt-0">
                                         <label for="user_name" class="form-label"><h4>Round trip</h4></label>
-                                    <input class="form-control me-2" type="date" placeholder="Date of check-out" aria-label="Date of travel" id="return_date" name="return_date" onchange="getReturnDate()" required>
+                                    <input class="form-control me-2" type="date" placeholder="Date of check-out" aria-label="Date of travel" id="return_date" name="return_date" onchange="getReturnDate()" >
                                     </div>
                                     
                                 </div>
@@ -219,6 +225,12 @@
         {
             selection = document.getElementById("selection");
             console.log("Seleted preference:",selection.options[selection.selectedIndex].text);
+        }
+        function setdouble()
+        {
+            console.log(1);
+            localStorage.clear();
+            localStorage.setItem("flights+hotels", 1);
         }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
