--- a/views/round_Trip_results.ejs
+++ b/views/round_Trip_results.ejs
@@ -143,109 +143,117 @@
                   </div>
             </div>
             <div class="col-7 mt-3">
-                <h4 class="mx-2">Search results</h4>
-                <div class="container justify-content-center mt-2">
-                    <% for(var i=0; i < search_results.length; i++) { %>
-            
-                    <div class="row justify-content-center">
-                        <div class="col-12 text-center">
-                           
-                            <div class="card p-2" style="max-width: 760px;">
-                                <div class="row">
-                                  <div class="col-md-4 m-0 mt-2">
-                                      <h5 class="card-title mb-2 text-primary" name="flightname"><%= search_results[i].flightname %></h5>
-                                      <label for="name" class="form-label p-0 mt-2  mb-0"><b><i>Departing at</i></b></label>
-            
-                                      <p class="card-text p-0 m-0" name="departure_time"><%= search_results[i].departure_time %></p>
-                                      <label for="name" class="form-label p-0 mt-2 mb-0"><i><b>From</b></i></label>
-            
-                                      <p class="card-text p-0 m-0" name="departure_airport"><%= search_results[i].departure_airport %></p>
-                                      <label for="name" class="form-label p-0 mt-2 mb-0"><i><b>Date</b></i></label>
-            
-                                      <p class="card-text p-0 m-0" name="departure_date"><%= search_results[i].departure_date %></p>
-                                      
-                                  </div>
-                                  <div class="col-md-4 m-0 mt-2 text-center">
-                                    <h5 class="card-title mb-2 text-primary" name="hotel_name"><%= search_results[i].flightnumber %></h5>
-                                    <label for="name" class="form-label p-0 mt-2 mb-0"><b><i>Arriving at</i></b></label>
-            
-                                    <p class="card-text p-0 m-0" name="departure_time"><%= search_results[i].arrival_time %></p>
-                                      <label for="name" class="form-label p-0 mt-2 mb-0"><i><b>To</b></i></label>
-            
-                                      <p class="card-text p-0 m-0" name="departure_airport"><%= search_results[i].arrival_airport %></p>
-                                      <label for="name" class="form-label p-0 mt-2 mb-0"><i><b>Date</b></i></label>
-            
-                                      <p class="card-text p-0 m-0" name="departure_date"><%= search_results[i].arrival_date %></p>
-                                      
-                                </div>
-                                  <div class="col-md-4">
-                                    <div class="card flights p-4 mt-2">
-                                        <div class="card-body">
-                                            <% if(preference == 1) { %>
-                                                <p class="card-text text-light p-0 m-0" name="price"><b>$<%= search_results[i].business_seat_price %></b></p>
-                                                <% }%>
-                                                <% if(preference == 2) { %>
-                                                <p class="card-text text-light p-0 m-0" name="price"><b>$<%= search_results[i].economy_seat_price %></b></p>
-                                                <% }%>
-                    
-                                                <form method="post" action="book_flight_now">
-                                                    <input type="hidden" id="flight_id" name="flight_id" value = "<%= search_results[i]._id %>"/>
-                                    <input type="hidden" id="flight_name" name="flight_name" value = "<%= search_results[i].flightname %>"/>
-                                    <input type="hidden" id="flightnumber" name="flightnumber" value = "<%= search_results[i].flightnumber %>"/>
-                                    <input type="hidden" id="departure_airport" name="departure_airport" value = "<%= search_results[i].departure_airport %> %>"/>
-    
-                                    <input type="hidden" id="arrival_airport" name="arrival_airport" value = "<%= search_results[i].arrival_airport %>"/>
-                                    <input type="hidden" id="departure_date" name="departure_date" value = "<%= search_results[i].departure_date %>"/>
-                                    <input type="hidden" id="arrival_date" name="arrival_date" value ="<%= search_results[i].arrival_date %>"/>
-                                    <input type="hidden" id="departure_time" name="departure_time" value ="<%= search_results[i].departure_time %>"/>
-                                    <input type="hidden" id="arrival_time" name="arrival_time" value ="<%= search_results[i].arrival_time %>"/>  
-                                    <input type="hidden" id="miles" name="miles" value ="<%= search_results[i].miles %>"/>                             
-                                    <input type="hidden" id="passengers" name="passengers" value ="<%= people %>"/>  
-                                                    <% if(preference == 1) { %>
-                                                        <input type="hidden" id="price" name="price" value="<%= search_results[i].business_seat_price %>">          
-                                                    <% }%>
-                                                        <% if(preference == 2) { %>
-                                                        <input type="hidden" id="price" name="price"value="<%= search_results[i].economy_seat_price %>"
-                                                    <% }%>
-                    
-                    
-                                                    <input type="hidden" id="add_to_cart" value="abc"/>
-                                                <button type="submit" class="btn btn-light mt-2 text-light"><p class="text-primary m-0">Book now!</p></button>
-                                            </form>
-                                                
-                                            
-                                                <form method="post" action="add_flight_to_cart" class="mt-4">
-                                                    <input type="hidden" id="flight_id" name="flight_id" value = "<%= search_results[i]._id %>"/>
-                                                    <input type="hidden" id="flight_name" name="flight_name" value = "<%= search_results[i].flightname %>"/>
-                                                    <input type="hidden" id="flightnumber" name="flightnumber" value = "<%= search_results[i].flightnumber %>"/>
-                                                    <input type="hidden" id="departure_airport" name="departure_airport" value = "<%= search_results[i].departure_airport %> %>"/>
-                    
-                                                    <input type="hidden" id="arrival_airport" name="arrival_airport" value = "<%= search_results[i].arrival_airport %>"/>
-                                                    <input type="hidden" id="departure_date" name="departure_date" value = "<%= search_results[i].departure_date %>"/>
-                                                    <input type="hidden" id="arrival_date" name="arrival_date" value ="<%= search_results[i].arrival_date %>"/>
-                                                    <input type="hidden" id="departure_time" name="departure_time" value ="<%= search_results[i].departure_time %>"/>
-                                                    <input type="hidden" id="arrival_time" name="arrival_time" value ="<%= search_results[i].arrival_time %>"/>  
-                                                    <input type="hidden" id="miles" name="miles" value ="<%= search_results[i].miles %>"/>                             
-                                                    <input type="hidden" id="passengers" name="passengers" value ="<%= people %>"/>  
-                                                        <% if(preference == 1) { %>
-                                                            <input type="hidden" id="price" name="price" value="<%= search_results[i].business_seat_price %>">          
-                                                        <% }%>
-                                                            <% if(preference == 2) { %>
-                                                            <input type="hidden" id="price" name="price"value="<%= search_results[i].economy_seat_price %>"
-                                                        <% }%>                             
-                    
-                                                        <input type="hidden" id="add_to_cart" value="abc"/>
-                                                    <button type="submit" class="btn btn-warning m-0">Add to cart</button>
-                                                </form>
-                                            </div>
-                                        </div>
-                                      </div>
-                                </div>
-                            </div>
-                            
+                <form method="post" action="round_trip_cart">
+                    <input type="hidden" id="passengers" name="passengers"  value="<%= people %>"/>
+                    <input type="hidden" id="preference" name="preference"  value="<%= preference %>"/>
+
+                <% if(flights_to_destination.length != 0) { %>
+                    <hr/>
+                    <h4>From <%= departure_city.charAt(0).toUpperCase() + departure_city.slice(1)  %> - <%= destination_city.charAt(0).toUpperCase() + destination_city.slice(1)  %></h4>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                              <th scope="col"></th>
+                              <th scope="col">Airline name</th>
+                              <th scope="col">From</th>
+                              <th scope="col">Schedule</th>
+                              <th scope="col">To</th>
+                              <th scope="col">Schedule</th>
+                              <th scope="col">Price</th>
+                            </tr>
+                          </thead>
+                        <tbody>
+                          <% for(var i=0; i < flights_to_destination.length; i++) { %>
+                          <tr>
+                            <th scope="row"><input class="form-check-input" id = "exporter" type="checkbox" name="to_flight" value="<%= JSON.stringify(flights_to_destination[i])%>"></th>
+                            <input type="hidden" name="type" value="flight_ticket"/>
+                            <input type="hidden" name="flightname" value="<%= flights_to_destination[i].flightname %>"/>
+                            <input type="hidden" name="flightnumber" value="<%= flights_to_destination[i].flightnumber %>"/>
+                            <input type="hidden" name="departure_airport" value="<%= flights_to_destination[i].departure_airport %>"/>
+                            <input type="hidden" name="departure_date" value="<%= flights_to_destination[i].departure_date %>"/>
+                            <input type="hidden" name="departure_time" value="<%= flights_to_destination[i].departure_time %>"/>
+                            <input type="hidden" name="arrival_airport" value="<%= flights_to_destination[i].arrival_airport %>"/>
+                            <input type="hidden" name="arrival_time" value="<%= flights_to_destination[i].arrival_time %>"/>
+                            <input type="hidden" name="price" value="<%= flights_to_destination[i].business_seat_price %>"/>
+                            <input type="hidden" id="miles" name="to_miles" value ="<%= flights_to_destination[i].miles %>"/>
+
+
+                            <td><%= flights_to_destination[i].flightname %></td>
+                            <td ><%= flights_to_destination[i].departure_airport %></td>
+                            <td ><%= flights_to_destination[i].departure_date %> <%= flights_to_destination[i].departure_time %></td>
+                            <td ><%= flights_to_destination[i].arrival_airport %></td>
+                            <td ><%= flights_to_destination[i].arrival_date %> <%= flights_to_destination[i].arrival_time %></td>
+                            <td ><% if(preference == 1 && flights_to_destination.length != 0) { %>
+                                <%= "$"+flights_to_destination[i].business_seat_price %>
+                              <% }%>
+                              <% if(preference == 2 && flights_to_destination.length != 0) { %>
+                                <%= "$"+flights_to_destination[i].economy_seat_price %>
+                            <% }%></td>
+
+                          </tr>
+                          <% } %>
+                        </tbody>
+                      </table>
+                <% } %>
+                <% if(flights_to_destination.length == 0) { %>
+                    <h3>Currently no flights to your destination.</h3>
+                <% } %>
+                <% if(flights_from_destination.length != 0) { %>
+                    <hr/>
+                    <h4 class="mb-2"> From <%= destination_city.charAt(0).toUpperCase() + destination_city.slice(1)  %> - <%= departure_city.charAt(0).toUpperCase() + departure_city.slice(1)  %></h4>
+                    <table class="table m-0">
+                        <thead>
+                            <tr>
+                              <th scope="col"></th>
+                              <th scope="col">Airline name</th>
+                              <th scope="col">From</th>
+                              <th scope="col">Schedule</th>
+                              <th scope="col">To</th>
+                              <th scope="col">Schedule</th>
+                              <th scope="col">Price</th>
+                            </tr>
+                          </thead>
+                        <tbody>
+                          <% for(var i=0; i < flights_from_destination.length; i++) { %>
+                          <tr>
+                            <th scope="row"><input class="form-check-input" id = "exporter" type="checkbox" name="from_flight" value="<%= JSON.stringify(flights_from_destination[i])%>"></th>
+                            <input type="hidden" name="type" value="flight_ticket"/>
+                            <input type="hidden" name="flightname" value="<%= flights_from_destination[i].flightname %>"/>
+                            <input type="hidden" name="flightnumber" value="<%= flights_from_destination[i].flightnumber %>"/>
+                            <input type="hidden" name="departure_airport" value="<%= flights_from_destination[i].departure_airport %>"/>
+                            <input type="hidden" name="departure_date" value="<%= flights_from_destination[i].departure_date %>"/>
+                            <input type="hidden" name="departure_time" value="<%= flights_from_destination[i].departure_time %>"/>
+                            <input type="hidden" name="arrival_airport" value="<%= flights_from_destination[i].arrival_airport %>"/>
+                            <input type="hidden" name="arrival_time" value="<%= flights_from_destination[i].arrival_time %>"/>
+                            <input type="hidden" name="price" value="<%= flights_from_destination[i].business_seat_price %>"/>
+                            <input type="hidden" id="miles" name="from_miles" value ="<%= flights_from_destination[i].miles %>"/>
+                            <td><%= flights_from_destination[i].flightname %></td>
+                            <td><%= flights_from_destination[i].departure_airport %></td>
+                            <td><%= flights_from_destination[i].departure_date %> <%= flights_from_destination[i].departure_time %></td>
+                            <td><%= flights_from_destination[i].arrival_airport %></td>
+                            <td><%= flights_from_destination[i].arrival_date %> <%= flights_from_destination[i].arrival_time %></td>
+                            <td><% if(preference == 1 && flights_from_destination.length != 0) { %>
+                                <%= "$"+flights_from_destination[i].business_seat_price %>
+                              <% }%>
+                              <% if(preference == 2 && flights_from_destination.length != 0) { %>
+                                <%= "$"+flights_from_destination[i].economy_seat_price %>
+                            <% }%></td>
+
+                          </tr>
+                          <% } %>
+                        </tbody>
+                      </table>
+                <% } %>
+                <% if(flights_from_destination.length == 0) { %>
+                    <h3>Currently no flights to your destination.</h3>
+                <% } %>
+                <div class="container-fluid justify-content-center">
+                    <div class="row mt-2 justify-content-center mt-2">
+                        <div class="col-2 text-center p-2">
+                                <button type="submit" class="btn btn-warning p-2">Add to cart</button>
+                            </form>
                         </div>
                     </div>
-                    <% } %>
                 </div>
             </div>
         </div>
@@ -257,6 +265,23 @@
     <script>
         var check_in_date = "";
         var check_out_date = "";
+        // the selector will match all input controls of type :checkbox
+        // and attach a click event handler 
+        $("input:checkbox").on('click', function() {
+        // in the handler, 'this' refers to the box clicked on
+        var $box = $(this);
+        if ($box.is(":checked")) {
+            // the name of the box is retrieved using the .attr() method
+            // as it is assumed and expected to be immutable
+            var group = "input:checkbox[name='" + $box.attr("name") + "']";
+            // the checked state of the group/box on the other hand will change
+            // and the current value is retrieved using .prop() method
+            $(group).prop("checked", false);
+            $box.prop("checked", true);
+        } else {
+            $box.prop("checked", false);
+        }
+        });
         function reset_date_native(date_field) {
             // var date_input = document.getElementById('check_out');
 
