--- a/views/bookings.ejs
+++ b/views/bookings.ejs
@@ -29,12 +29,17 @@
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                     <li class="nav-item ">
                         <a class="nav-link active text-light" aria-current="page" href="searchflights">
-                            <button type="button" class="btn btn-primary">Flights</button>
+                            <button type="button" class="btn btn-light">Flights</button>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active text-light" aria-current="page" href="searchhotels">
                             <button type="button" class="btn btn-primary">Hotels</button>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active text-light" aria-current="page" href="flights&hotels">
+                            <button type="button" class="btn btn-primary" onclick="setdouble()">Flights & Hotels</button>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -44,7 +49,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active text-light" aria-current="page" href="mybookings">
-                            <button type="button" class="btn btn-light">Purchases</button>
+                            <button type="button" class="btn btn-primary">Purchases</button>
 
                         </a>
                     </li>
@@ -56,16 +61,16 @@
                         My account
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="editprofile">Edit profile</a></li>
-                        <li><a class="dropdown-item bg-primary text-white" href="editprofile"><b></b><%= user.mileage %> miles</b></a></li>
-                        <li><a class="dropdown-item" href="logout">Log out</a></li>
+                      <li><a class="dropdown-item" href="editprofile">Edit profile</a></li>
+                      <li><a class="dropdown-item bg-primary text-white" href="editprofile"><b></b><%= user.mileage %> miles</b></a></li>
+                      <li><a class="dropdown-item" href="logout">Log out</a></li>
                     </ul>
                   </div>
                 
                 </div>
             </div>
         </nav>
-    </div> 
+    </div>  
     <div class="container text-center">
     <h3 class="mt-2">Recent purchases</h3>
     <div class="container-fluid justify-content-center mt-5 mb-5">
