--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <nav class="navbar bg-primary navbar-expand-lg text-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="homepage"><h4 class="text-light">Nomadic travel</h4></a>
+                <a class="navbar-brand" href="/"><h4 class="text-light">Nomadic travel</h4></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -34,7 +34,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-light" aria-current="page" href="searchflights">
+                        <a class="nav-link active text-light" aria-current="page" href="flights&hotels">
                             <button type="button" class="btn btn-primary" onclick="setdouble()">Flights & Hotels</button>
                         </a>
                     </li>
