--- a/views/no_flights_found.ejs
+++ b/views/no_flights_found.ejs
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <nav class="navbar bg-primary navbar-expand-lg text-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="homepage"><h4 class="text-light">Nomadic travel</h4></a>
+                <a class="navbar-brand" href="/"><h4 class="text-light">Nomadic travel</h4></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -31,6 +31,11 @@
                     <li class="nav-item">
                         <a class="nav-link active text-light" aria-current="page" href="searchhotels">
                             <button type="button" class="btn btn-primary">Hotels</button>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active text-light" aria-current="page" href="flights&hotels">
+                            <button type="button" class="btn btn-primary" onclick="setdouble()">Flights & Hotels</button>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -53,6 +58,7 @@
                     </button>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="editprofile">Edit profile</a></li>
+                      <li><a class="dropdown-item bg-primary text-white" href="editprofile"><b></b><%= user.mileage %> miles</b></a></li>
                       <li><a class="dropdown-item" href="logout">Log out</a></li>
                     </ul>
                   </div>
@@ -60,7 +66,7 @@
                 </div>
             </div>
         </nav>
-    </div> 
+    </div>  
        
     <div class="container-fluid mt-2 position-fixed">
 
@@ -85,7 +91,7 @@
                                     <input class="form-control me-2" type="search" placeholder="Enter city name" aria-label="Departure city" id="departure_city" name="departure_city" required>
                                 </div>
                             </div>
-                            
+
                             <div class="col-12 m-2 mt-2">
                                 <div class="row text-left">
                                     <div class="col-5 m-2 mt-0">
