--- a/views/no_hotels_found.ejs
+++ b/views/no_hotels_found.ejs
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <nav class="navbar bg-primary navbar-expand-lg text-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="homepage"><h4 class="text-light">Nomadic travel</h4></a>
+                <a class="navbar-brand" href="/"><h4 class="text-light">Nomadic travel</h4></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -25,12 +25,17 @@
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                     <li class="nav-item ">
                         <a class="nav-link active text-light" aria-current="page" href="searchflights">
-                            <button type="button" class="btn btn-primary">Flights</button>
+                            <button type="button" class="btn btn-light">Flights</button>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active text-light" aria-current="page" href="searchhotels">
-                            <button type="button" class="btn btn-light">Hotels</button>
+                            <button type="button" class="btn btn-primary">Hotels</button>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active text-light" aria-current="page" href="flights&hotels">
+                            <button type="button" class="btn btn-primary" onclick="setdouble()">Flights & Hotels</button>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -53,6 +58,7 @@
                     </button>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="editprofile">Edit profile</a></li>
+                      <li><a class="dropdown-item bg-primary text-white" href="editprofile"><b></b><%= user.mileage %> miles</b></a></li>
                       <li><a class="dropdown-item" href="logout">Log out</a></li>
                     </ul>
                   </div>
@@ -60,7 +66,7 @@
                 </div>
             </div>
         </nav>
-    </div> 
+    </div>  
 
     <div class="container-fluid mt-2 position-fixed">
 
